<resources>
    <string name="app_name">Basic animations</string>
    <string name="start_cycling">Click anywhere below to start and stop Cycling.</string>
    <string name="sample_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lottie_animation">Lottie Animation</string>
    <string name="hop_animation">Hop Animation</string>
    <string name="expand_animation">Expand Animation</string>
    <string name="ripple_animation">Ripple Animation</string>
    <string name="fade_animation">Fade Animation</string>
    <string name="shared_element_animation">Shared Element Animation</string>
    <string name="flip_animation">Flip Animation</string>
</resources>
